hide scrollbar and fix some issue

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -138,3 +138,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
